numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@expected_digit.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/expected_digit.nbt
---
error: while parsing
  ┌─ <internal:3>:1:4
  │
1 │ 1e-
  │    ^ Expected digit
